h1. Changelog

Here's a summary of changes in each release. The list doesn't include some small changes or updates to test cases.

h2. Version 3.5.5 - upcoming

* Fix wrong triggered error type when using the deprecated $encode option of Parser::textileThis().

h2. "Version 3.5.4 - 2013/11/06":https://github.com/textile/php-textile/releases/tag/v3.5.4

* Fix broken image alignment in HTML5 mode (closes "#123":https://github.com/textile/php-textile/issues/123).
* Fix duplicate HTML IDs that occur when a footnote isn't referenced in the content (closes "#125":https://github.com/textile/php-textile/issues/125). 
* Don't include image alignment to the URL in restricted mode.
* Detect and process quoted quote symbols.
* New link parser (closes "#86":https://github.com/textile/php-textile/issues/86, "#87":https://github.com/textile/php-textile/issues/87 and "#128":https://github.com/textile/php-textile/issues/128).

h2. "Version 3.5.3 - 2013/10/30":https://github.com/textile/php-textile/releases/tag/v3.5.3

* Fix double image URL encoding (closes "#102":https://github.com/textile/php-textile/issues/102).
* Fix URL reference token spoofing.
* Fix broken parser output when $strict argument was set to TRUE (closes "#119":https://github.com/textile/php-textile/issues/119).
* Fix memory leaking tag cache. Tag cache is never reset between @textileThis()@ and @textileRestricted()@ calls referencing the same instance.
* Fix rare instances where a link displays a wrong URL mentioned elsewhere in the document.
* Fix invalid markup generated when Redcloth-style definition list is used inside a table cell.
* Link aliases follow same allowed URL schemes as normal links.
* Update @hasRawText()@ and @fPBr()@ to detect a wider range of raw HTML and XHTML.
* Unify attribute order with Redcloth.
* Reduce list and blockquote indentation level to match paragraphs and other block tags.
* Restrict how spans are parsed (closes "#106":https://github.com/textile/php-textile/issues/106).